set {{ tmp_dir }} to ~/tmp/tor-relays

--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -3,4 +3,4 @@
 ca_dir: "{{ role_path }}/../../../secrets/ca"
 
 # local directory for site-info files
-tmp_dir: "{{ lookup('env', 'HOME') }}/tmp"
+tmp_dir: "{{ lookup('env', 'HOME') }}/tmp/tor-relays"
