--- a/playbooks/info.yaml
+++ b/playbooks/info.yaml
@@ -1,22 +1,25 @@
 ---
-- name: Info Misc
+- name: Info common
   hosts: all
   roles:
-    - role: info_healthy
-      tags:
-        - info-healthy
     - role: info_common
       tags:
         - info-common
+    - role: info_healthy
+      tags:
+        - info-healthy
+    - role: info_misc
+      tags:
+        - info-misc
 
-- name: Info Snowflake
+- name: Info snowflake
   hosts: snowflake
   roles:
     - role: info_snowflake
       tags:
         - info-snowflake
 
-- name: Info Tor
+- name: Info tor
   hosts: tor
   roles:
     - role: info_tor
