polish disk kernel handling

--- a/playbooks/roles/setup_common/tasks/kernel-dist.yaml
+++ b/playbooks/roles/setup_common/tasks/kernel-dist.yaml
@@ -1,13 +1,15 @@
 ---
 - name: Debian kernel
-  vars:
-    _arch: "{{ (ansible_facts.architecture == 'x86_64') | ternary('amd64', 'arm64') }}"
-    _cloud: "{{ kernel_debian_cloud | ternary('-cloud', '') }}"
-  when: kernel_debian_backports or kernel_debian_cloud
+  when: ansible_facts.distribution in ('Debian')
   block:
-    - name: Install desired Debian kernel flavour
+    - name: Install desired Debian kernel
+      when: kernel_debian_backports or kernel_debian_cloud
+      vars:
+        _arch: "{{ (ansible_facts.architecture == 'x86_64') | ternary('amd64', 'arm64') }}"
+        _backports: "{{ kernel_debian_backports | ternary('-backports', '') }}"
+        _cloud: "{{ kernel_debian_cloud | ternary('-cloud', '') }}"
       ansible.builtin.apt:
-        default_release: "{{ ansible_facts.distribution_release }}{{ kernel_debian_backports | ternary('-backports', '') }}"
+        default_release: "{{ ansible_facts.distribution_release }}{{ _backports }}"
         name:
           - "linux-image{{ _cloud }}-{{ _arch }}"
       register: _kernel_dist
