--- a/playbooks/roles/info_healthy/tasks/_trace.yaml
+++ b/playbooks/roles/info_healthy/tasks/_trace.yaml
@@ -3,9 +3,9 @@
   delegate_to: localhost
   throttle: 1
   ansible.builtin.lineinfile:
-    line: "{{ _headline }}"
-    path: "{{ tmp_dir }}/trace-headline.txt"
-    regexp: "^{{ _headline }}$"
+    line: "{{ _codeline }}"
+    path: "{{ tmp_dir }}/trace-codeline.txt"
+    regexp: "^{{ _codeline }}$"
   register: _known
 
 - name: Work on new trace
@@ -18,7 +18,7 @@
           set -o pipefail
 
           journalctl --since "{{ trace_since }}" --quiet |
-            awk "/{{ item | regex_replace('\/', '\\/') | regex_replace('\[', '\\[') }}/,/ kernel: ---\[ end trace /" |
+            awk "/{{ _headline | regex_replace('\/', '\\/') | regex_replace('\[', '\\[') }}/,/ kernel: ---\[ end trace /" |
             head -n 999
         executable: /bin/bash
       register: _full
@@ -31,7 +31,7 @@
           #    {{ inventory_hostname }}    {{ ansible_facts.lsb.description }}    {{ now(utc=true, fmt='%Y-%m-%d %H:%M:%S') }}
           {{ _full.stdout }}
         path: "{{ tmp_dir }}/trace-full.txt"
-        marker: "# {mark} {{ _headline }}"
+        marker: "# {mark} {{ _codeline }} "
         marker_begin: "TRACE BEGIN"
         marker_end: "TRACE END"
 
