--- a/playbooks/roles/setup_common/tasks/update-apt.yaml
+++ b/playbooks/roles/setup_common/tasks/update-apt.yaml
@@ -41,14 +41,21 @@
       - needrestart
       - psmisc
       - rsync
-
-- name: Install/Update additional software
-  when: additional_software
-  ansible.builtin.apt:
-    name: "{{ additional_software }}"
+      - sysstat
 
 - name: Do not run Git cleanup in background
   when: ansible_facts.memtotal_mb < 4096 or ansible_facts.processor_vcpus < 4
   changed_when: false
   ansible.builtin.command:
     cmd: git config --global --add gc.autoDetach false
+
+- name: Acticate sysstat
+  ansible.builtin.lineinfile:
+    line: 'ENABLED="true"'
+    path: /etc/default/sysstat
+    regex: '^ENABLED="'
+
+- name: Install/Update additional software
+  when: additional_software
+  ansible.builtin.apt:
+    name: "{{ additional_software }}"
