--- a/playbooks/roles/setup_autoupdate/tasks/main.yaml
+++ b/playbooks/roles/setup_autoupdate/tasks/main.yaml
@@ -28,6 +28,10 @@
       owner: root
       group: root
       mode: "0644"
+    ansible.builtin.systemd_service:
+      daemon_reload: true
+      enabled: true
+      no_block: true
   block:
     - name: Configure unattended update for Debian
       when: ansible_facts.distribution in ('Debian')
