--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -52,6 +52,7 @@
     ansible.builtin.systemd_service:
       daemon_reload: true
       enabled: true
+      no_block: true
     ansible.builtin.template:
       owner: root
       group: root
