--- a/playbooks/roles/setup_snowflake/tasks/main.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/main.yaml
@@ -24,6 +24,7 @@
     ansible.builtin.systemd_service:
       daemon_reload: true
       enabled: true
+      no_block: true
   block:
     - name: Firewall
       ansible.builtin.import_tasks: firewall.yaml
