--- a/playbooks/roles/setup_tor/tasks/main.yaml
+++ b/playbooks/roles/setup_tor/tasks/main.yaml
@@ -33,6 +33,7 @@
     ansible.builtin.systemd_service:
       daemon_reload: true
       enabled: true
+      no_block: true
     ansible.builtin.template:
       owner: root
       group: root
