--- a/playbooks/roles/setup_common/tasks/ipv6-hetzner.yaml
+++ b/playbooks/roles/setup_common/tasks/ipv6-hetzner.yaml
@@ -1,8 +1,7 @@
 ---
 - name: Ensure IPv6 address has valid prefix
-  when: ansible_facts.default_ipv6.address is match('fe80::')
+  when: ansible_facts.default_ipv6 is not defined or ansible_facts.default_ipv6.address is match('fe80::')
   failed_when: true
-  changed_when: true
   ansible.builtin.debug:
     var: ansible_facts.default_ipv6
 
@@ -68,8 +67,7 @@
           - default_ipv6
 
 - name: Ensure IPv6 address is non-default
-  when: ansible_facts.default_ipv6.address is search('::1$')
+  when: ansible_facts.default_ipv6.address is not defined or ansible_facts.default_ipv6.address is search('::1$')
   failed_when: true
-  changed_when: true
   ansible.builtin.debug:
     var: ansible_facts.default_ipv6
