--- a/playbooks/roles/setup_common/tasks/ipv6-hetzner.yaml
+++ b/playbooks/roles/setup_common/tasks/ipv6-hetzner.yaml
@@ -1,6 +1,11 @@
 ---
+- name: Gather facts - IPv6
+  ansible.builtin.setup:
+    gather_subset:
+      - default_ipv6
+
 - name: Ensure IPv6 address has valid prefix
-  when: ansible_facts.default_ipv6 is not defined or ansible_facts.default_ipv6.address is match('fe80::')
+  when: ansible_facts.default_ipv6.address is not defined or ansible_facts.default_ipv6.address is match('fe80::')
   failed_when: true
   ansible.builtin.debug:
     var: ansible_facts.default_ipv6
@@ -33,6 +38,7 @@
           ansible.builtin.systemd_service:
             name: networking
             state: restarted
+            no_block: false
 
     - name: Change IPv6 for Ubuntu
       when: ansible_facts.distribution in ('Ubuntu')
