--- a/playbooks/roles/setup_common/defaults/main.yaml
+++ b/playbooks/roles/setup_common/defaults/main.yaml
@@ -2,8 +2,8 @@
 additional_ports: []
 additional_software: []
 
-kernel_debian_backports: true
-kernel_debian_cloud: true
+kernel_debian_backports: false
+kernel_debian_cloud: false
 
 kernel_build_from_source: false
 kernel_git_repo_url: ""
