fix sysctl for minicoredumper

--- a/playbooks/roles/setup_common/files/20tor-system.conf
+++ b/playbooks/roles/setup_common/files/20tor-system.conf
@@ -6,8 +6,9 @@ net.ipv4.tcp_syncookies = 1
 net.ipv6.ip_nonlocal_bind = 1
 
 # Hints:
-# User namespaces are needed for Snowflake systemd restart.
-# Modules are needed to boot a distribution kernel.
+#   User namespaces are needed for Snowflake systemd restart.
+#   Modules are needed to boot a distribution kernel.
+#   PTRACE_ATTACH must be 1 for minicoredumper
 
 # https://kspp.github.io/Recommended_Settings#sysctls
 
@@ -35,7 +36,8 @@ kernel.kexec_load_disabled = 1
 kernel.randomize_va_space = 2
 
 # Block all PTRACE_ATTACH. If you need ptrace to work, then avoid non-ancestor ptrace access to running processes and their credentials, and use value "1".
-kernel.yama.ptrace_scope = 3
+# kernel.yama.ptrace_scope = 3
+kernel.yama.ptrace_scope = 1
 
 # Disable User Namespaces, as it opens up a large attack surface to unprivileged users.
 #user.max_user_namespaces = 0
