--- a/playbooks/roles/setup_common/tasks/system-config.yaml
+++ b/playbooks/roles/setup_common/tasks/system-config.yaml
@@ -29,6 +29,7 @@
 
 - name: Ensure sysctl values are up to date
   changed_when: _sysctl.changed or _result.stderr
+  failed_when: false # Ubuntu: sysctl: setting key "kernel.yama.ptrace_scope": Invalid argument
   ansible.builtin.command:
     cmd: sysctl --system 1>/dev/null
   register: _result
