enable few more nore exporter collectors

--- a/playbooks/roles/setup_common/tasks/node-exporter.yaml
+++ b/playbooks/roles/setup_common/tasks/node-exporter.yaml
@@ -6,19 +6,26 @@
   notify: Restart Prometheus node exporter
 
 # https://github.com/prometheus/node_exporter
-# reduce the load at the tiny cloud instances itself, see "params:" in the prometheus.yaml config file
+# reduce the pressure at the (tiny cloud) instances itself instead filtering by "params:" in the prometheus.yaml config file
 - name: Configure Prometheus node exporter
   vars:
     _collectors:
       [
+        "arp",
         "conntrack",
         "cpu",
+        "diskstats",
+        "filefd",
         "filesystem",
         "loadavg",
         "meminfo",
         "netdev",
         "netstat",
+        "processes",
         "sockstat",
+        "softnet",
+        "stat",
+        "udp_queues",
         "uname",
         "vmstat",
       ]
@@ -28,12 +35,14 @@
       ARGS='
       --web.listen-address=localhost:9100
       --collector.disable-defaults
-      {{ ["--collector"] | product(_collectors) | map('join', ' ') | join(' ') }}
+      {{ ["--collector"] | product(_collectors) | map('join', '.') | join(' ') }}
       --collector.filesystem.mount-points-exclude="^/(dev|proc|run/credentials/.+|sys)($|/)"
       '
     path: /etc/default/prometheus-node-exporter
     regexp: "^ARGS="
   notify: Restart Prometheus node exporter
+  tags:
+    - meow
 
 - name: Enable Prometheus node exporter at boot
   ansible.builtin.systemd_service:
