--- a/playbooks/roles/info_common/tasks/targets.yaml
+++ b/playbooks/roles/info_common/tasks/targets.yaml
@@ -12,28 +12,28 @@
       delegate_to: localhost
       throttle: 1
       ansible.builtin.lineinfile:
-        path: "{{ tmp_dir }}/tor_ddos-targets.yaml"
+        path: "{{ tmp_dir }}/targets_tor-ddos.yaml"
         state: "{{ (ddos_metrics is defined and ddos_metrics) | ternary('present', 'absent') }}"
 
     - name: Node targets
       delegate_to: localhost
       throttle: 1
       ansible.builtin.lineinfile:
-        path: "{{ tmp_dir }}/node-targets.yaml"
+        path: "{{ tmp_dir }}/targets_node.yaml"
         state: "{{ (node_metrics is defined and node_metrics) | ternary('present', 'absent') }}"
 
     - name: Snowflake targets
       delegate_to: localhost
       throttle: 1
       ansible.builtin.lineinfile:
-        path: "{{ tmp_dir }}/snowflake-targets.yaml"
+        path: "{{ tmp_dir }}/targets_snowflake.yaml"
         state: "{{ (snowflake_metrics is defined and snowflake_metrics) | ternary('present', 'absent') }}"
 
     - name: Tor bridge targets
       delegate_to: localhost
       throttle: 1
       ansible.builtin.lineinfile:
-        path: "{{ tmp_dir }}/tor_bridge-targets.yaml"
+        path: "{{ tmp_dir }}/targets_tor-bridge.yaml"
         state:
           "{{ (tor_metrics is defined and tor_metrics and (bridge_distribution is defined and bridge_distribution)) |
           ternary('present', 'absent') }}"
@@ -42,7 +42,7 @@
       delegate_to: localhost
       throttle: 1
       ansible.builtin.lineinfile:
-        path: "{{ tmp_dir }}/tor_server-targets.yaml"
+        path: "{{ tmp_dir }}/targets_tor-server.yaml"
         state:
           "{{ (tor_metrics is defined and tor_metrics and (bridge_distribution is undefined or not bridge_distribution)) |
           ternary('present', 'absent') }}"
