--- a/examples/systems-hcloud.yaml
+++ b/examples/systems-hcloud.yaml
@@ -65,7 +65,7 @@ h_common:
     kernel_git_version: "{{ _versions[_parts[3] | default('')] | default('') }}"
     kernel_debian_backports: "{{ _parts[4] | default('') != 'nobp' }}"
     kernel_debian_cloud: "{{ _parts[5] | default('') != 'nocl' }}"
-    kernel_build_from_source: "{{ _parts[3] | default('') in _versions | list }}"
+    kernel_vanilla: "{{ _parts[3] | default('') in _versions | list }}"
   children:
     hi:
     hn:
