--- a/playbooks/roles/setup_common/defaults/main.yaml
+++ b/playbooks/roles/setup_common/defaults/main.yaml
@@ -2,25 +2,26 @@
 additional_ports: []
 additional_software: []
 
+# e.g.:  -e custom_command="'cd linux; make clean'"
+custom_command: ""
+
+# Debian kernel flavours
 kernel_debian_backports: false
 kernel_debian_cloud: false
 
-kernel_build_from_source: false
+# vanilla kernel
+kernel_vanilla: false
+kernel_vanilla_build: "{{ ('snapshot' in group_names) | ternary('no', 'yes') }}" # or "detached"
 kernel_git_repo_url: ""
 kernel_git_version: ""
 kernel_git_patches: []
 
-# kernel build
-fire_and_forget: false
-
+# metrics
 metrics_port: ""
 nginx_metrics: false
 node_metrics: false
 prometheus_server: ""
 prometheus_server6: ""
-
-# e.g.:  -e custom_command="'cd linux; make clean'"
-custom_command: ""
 
 # nginx
 nginx_public_site: false
