--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -113,7 +113,7 @@
         - kernel-dist
 
     - name: Self-compiled kernel
-      when: kernel_build_from_source
+      when: kernel_vanilla
       ansible.builtin.import_tasks: kernel-src.yaml
       tags:
         - kernel-src
@@ -129,13 +129,13 @@
       tags:
         - node-exporter
 
-    - name: Catch async kernel build job
+    - name: Kernel build job id
       tags:
         - kernel-src
       when: _kernel_build is defined and _kernel_build.changed
       block:
         - name: Wait till kernel build finished
-          when: not fire_and_forget | bool
+          when: kernel_vanilla_build == "yes"
           ansible.builtin.async_status:
             jid: "{{ _kernel_build.ansible_job_id }}"
           register: _job_result
@@ -144,7 +144,7 @@
           delay: 60
           notify: Reboot system
 
-        - name: Cleanup kernel build async job
+        - name: Cleanup kernel build job id
           ansible.builtin.async_status:
             jid: "{{ _kernel_build.ansible_job_id }}"
             mode: cleanup
