--- a/playbooks/setup.yaml
+++ b/playbooks/setup.yaml
@@ -1,5 +1,5 @@
 ---
-# "de-normalize" plays, otherwise "-e kernel_vanilla_build=detached" could yield to unreachable systems
+# "de-normalize" plays, otherwise "-e kernel_vanilla_build=detached" could yield to temporary unreachable systems
 - name: Setup all
   hosts: "!snowflake:!tor"
   roles:
